--- a/TNLitchiRoot Project/lcapp/static/css/nav.css
+++ b/TNLitchiRoot Project/lcapp/static/css/nav.css
@@ -86,7 +86,7 @@
     border-radius: 20px;
     margin-right: 20px;
     font-size: 1rem;
-    color: #F54927;
+    color: #f6f5ef;
     background-color: #F88b74;
     margin-top: 0;
     font-family: noto-bold;
