--- a/TNLitchiRoot Project/lcapp/templates/apply.html
+++ b/TNLitchiRoot Project/lcapp/templates/apply.html
@@ -91,7 +91,7 @@
 					</div>
 					<input type="hidden" name="ap_recruitment_id" value="{{selectedRecruitment}}"/>
 					<input type="hidden" name="url" value="apply"/>
-					<button type="button" class="select-wrapper-button" onclick="location.href='../../download?path=file/resume_Bomi.doc '">지원서 양식 다운받기</button></br></br>
+					<button type="button" class="select-wrapper-button" onclick="location.href='../../download?path=file/resume_form.doc '">지원서 양식 다운받기</button></br></br>
 					{% if applyDetail.ap_resume == none%}
 						<input type="button" class="select-wrapper-button" value="지원하기" onclick="check()"/>
 					{% else%}
