--- a/TNLitchiRoot Project/lcapp/templates/info.html
+++ b/TNLitchiRoot Project/lcapp/templates/info.html
@@ -184,7 +184,7 @@
     <div class="signup-body">
         <header>
             <div class="signup-logo">
-                <a href="{% url 'index' %}" title="메인 화면"><img src="{% static 'css/imgs/logo.png'%}" class="signup-image"></a>
+                <img src="{% static 'css/imgs/myinfo.png'%}" class="signup-image">
             </div>
         </header>
         <form name="jf" action="info_ok" method="POST">
