--- a/TNLitchiRoot Project/lcapp/templates/apply.html
+++ b/TNLitchiRoot Project/lcapp/templates/apply.html
@@ -86,7 +86,7 @@
 						<div class="input-file">
 							<input type="text" readonly="readonly" class="file-name" placeholder="doc 파일만 첨부 가능"/>
 							<label for="upload01" class="file-label">파일 업로드</label>
-							<input type="file" name="resume" id="upload01" class="file-upload" accept=".doc"/>
+							<input type="file" name="resume" id="upload01" class="file-upload" accept=".doc,.docx"/>
 						</div>
 					</div>
 					<input type="hidden" name="ap_recruitment_id" value="{{selectedRecruitment}}"/>
