--- a/TNLitchiRoot Project/lcapp/templates/join.html
+++ b/TNLitchiRoot Project/lcapp/templates/join.html
@@ -191,7 +191,7 @@
                         
                 <h3>비밀번호</h3>
                 <span class="signup-input">
-                    <input name="pwd" id="pwd" type="password" title="비밀번호" placeholder="비밀번호를 입력하세요" maxlength="12" required="required">
+                    <input name="pwd" id="pwd" type="password" title="비밀번호" placeholder="비밀번호를 입력하세요(특수문자+영문+숫자 포함 6~12자)" maxlength="12" required="required">
                     <span class="signup-pwd-image"></span>
                 </span>
     
@@ -205,7 +205,7 @@
             <div class="signup-select">
                 <h3>이름</h3>
                 <span class="signup-input">
-                    <input name="name" id="name" type="text" title="이름" placeholder="이름을 입력하세요" required="required">
+                    <input name="name" id="name" type="text" title="이름" placeholder="이름을 입력하세요(최소 2~10글자)" required="required">
                 </span>
 
                 <h3>성별</h3>
