--- a/TNLitchiRoot Project/lcapp/static/css/footer.css
+++ b/TNLitchiRoot Project/lcapp/static/css/footer.css
@@ -106,6 +106,7 @@
     font-style: normal;
     color: #999;
     font-size: 0.9rem;
+    cursor: default;
 }
 
 .footer-copyringt{
@@ -114,4 +115,5 @@
     text-align: center;
     color: #999;
     font-size: 0.7rem;
+    cursor: default;
 }
