--- a/TNLitchiRoot Project/lcapp/static/css/index.css
+++ b/TNLitchiRoot Project/lcapp/static/css/index.css
@@ -53,6 +53,7 @@
     text-align: right;
     margin-top: 12.2rem;
     font-family: Arial black;
+    cursor: default;
 }
 
 .index-title span{
@@ -61,6 +62,7 @@
     font-weight: 500;  
     width: 210px;
     display: block;
+    cursor: default;
 }
 
 @keyframes opacityAni {
@@ -88,7 +90,7 @@
     text-align: left;
     margin-left: 5rem;
     font-family: 'noto-medium';
-    
+    cursor: default;
 }
 
 .index-detail span:first-child{
